style(products): align product card layout and bottom-align CTAs; fix specs markup for High-Octane Dark

--- a/products.html
+++ b/products.html
@@ -38,7 +38,7 @@
         <h2>High-Octane Dark</h2>
         <p class="muted">A High-Octane Black. Roast profile: Molten, bitter, commanding.</p>
         <ul class="specs">
-          <li><strong style="color: #990000;"></strong>Origin:</strong> Deep Strata</li>
+          <li><strong style="color: #990000;">Origin:</strong> Deep Strata</li>
           <li><strong style="color: #4a7c7c;">Grind:</strong> Coarse / Whole Bean</li>
           <li><strong style="color: #ffc72c;">Taste:</strong> Charcoal, Smoke, Bittersweet Amber</li>
         </ul>
