--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <img src="assets/svg-trans-logo-icon-01-bone.svg" class="brand-logo" alt="Burning Brew logo" />
     <span class="brand-text">BURNING BREW</span>
   </a>
+  <a href="checkoutflow.html" class="cart-btn" aria-label="View cart">
+    <img src="assets/shopping%20cart.svg" alt="Shopping cart" />
+  </a>
   <button id="nav-toggle" class="nav-toggle" aria-label="Open navigation" aria-expanded="false">☰</button>
       <nav class="site-nav" id="site-nav" aria-label="Main navigation">
   <a href="products.html">Products</a>
