chore(checkout): use global site header and footer

--- a/checkout.html
+++ b/checkout.html
@@ -91,16 +91,22 @@
   </style>
 </head>
 <body>
-  <header class="checkout-header" id="siteHeader">
-    <a class="logo brand" aria-label="Burning Brew home" href="index.html">
-      <img src="assets/svg-trans-logo-icon-01-bone.svg" alt="Burning Brew logo" class="brand-logo">
-      <span class="brand-text">Burning Brew</span>
-    </a>
-    <nav aria-label="Primary">
-      <a href="products.html">Products</a>
-      <a href="vision.html">Vision</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+  <header class="site-header" id="siteHeader">
+    <div class="nav-inner">
+  <a class="brand" href="index.html">
+  <img src="assets/svg-trans-logo-icon-01-bone.svg" class="brand-logo" alt="Burning Brew logo" />
+    <span class="brand-text">BURNING BREW</span>
+  </a>
+  <a href="checkoutflow.html" class="cart-btn" aria-label="View cart">
+    <img src="assets/shopping%20cart.svg" alt="Shopping cart" />
+  </a>
+  <button id="nav-toggle" class="nav-toggle" aria-label="Open navigation" aria-expanded="false">☰</button>
+      <nav class="site-nav" id="site-nav" aria-label="Main navigation">
+  <a href="products.html">Products</a>
+  <a href="vision.html">Vision</a>
+  <a href="contact.html">Contact</a>
+      </nav>
+    </div>
   </header>
 
   <main class="checkout-pit" id="main">
@@ -223,7 +229,42 @@
       </form>
     </section>
 
-    <footer aria-hidden="false">They burned. We brewed. Drink what's left.</footer>
+    <footer class="site-footer">
+    <div class="caution-stripe"></div>
+    <div class="footer-inner container">
+      <div class="col">
+        <div class="logo">
+          <img class="footer-logo" src="assets/svg-trans-logo-icon-01-bone.svg" alt="Burning Brew" />
+          <span>BURNING BREW</span>
+        </div>
+        <p class="tagline">From the Earth to the Grind.</p>
+      </div>
+      <div class="col">
+        <div class="contributors">
+          <a class="github-link" href="https://github.com/susanchapas" aria-label="Susan Chapas on GitHub" target="_blank" rel="noopener">
+            <svg viewBox="0 0 16 16" width="20" height="20" fill="currentColor" aria-hidden="true"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.19 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"/></svg>
+            <span class="gh-name">Susan Chapas</span>
+          </a>
+          <a class="github-link" href="https://github.com/mcbridgeee" aria-label="Bridget McTiernan on GitHub" target="_blank" rel="noopener">
+            <svg viewBox="0 0 16 16" width="20" height="20" fill="currentColor" aria-hidden="true"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.19 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"/></svg>
+            <span class="gh-name">Bridget McTiernan</span>
+          </a>
+        </div>
+      </div>
+      <div class="col">
+        <h3 class="section-title">Join the Fossil Order</h3>
+        <p class="muted">Receive dispatches from the Grind Frontier.</p>
+        <form class="newsletter" action="#" onsubmit="event.preventDefault(); alert('Subscribed — welcome to the Fossil Order.');">
+          <label for="newsletter-email" class="sr-only">Your email</label>
+          <div class="newsletter-row">
+            <input id="newsletter-email" type="email" placeholder="Your email" required />
+            <button class="btn small crude-button join-order" type="submit">Subscribe</button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="bottom-bar">© 2025 Burning Brew. Powered by Prehistoric Decay.</div>
+  </footer>
   </main>
 
   <div class="modal" id="confirmationModal" role="dialog" aria-modal="true" aria-hidden="true" aria-labelledby="modalTitle">
