fix(nav): normalize shopping cart filename and move cart to end of navbar

--- a/checkout.html
+++ b/checkout.html
@@ -97,15 +97,15 @@
   <img src="assets/svg-trans-logo-icon-01-bone.svg" class="brand-logo" alt="Burning Brew logo" />
     <span class="brand-text">BURNING BREW</span>
   </a>
-  <a href="checkoutflow.html" class="cart-btn" aria-label="View cart">
-    <img src="assets/shopping%20cart.svg" alt="Shopping cart" />
-  </a>
   <button id="nav-toggle" class="nav-toggle" aria-label="Open navigation" aria-expanded="false">☰</button>
       <nav class="site-nav" id="site-nav" aria-label="Main navigation">
   <a href="products.html">Products</a>
   <a href="vision.html">Vision</a>
   <a href="contact.html">Contact</a>
       </nav>
+  <a href="checkoutflow.html" class="cart-btn" aria-label="View cart">
+    <img src="assets/shopping-cart.svg" alt="Shopping cart" />
+  </a>
     </div>
   </header>
 
