perf(vision): switch to compressed image asset for faster loading

--- a/vision.html
+++ b/vision.html
@@ -52,7 +52,7 @@
       <h2 class="section-subtitle">How We Roast</h2>
       <div class="process-grid">
         <article class="process-card">
-          <img class="process-card__image" src="assets/small batches.jpg" alt="">
+          <img class="process-card__image" src="assets/compressed small batch.jpeg" alt="">
           <div class="process-card__inner">
             <h3>Small batches.</h3>
             <p>Because control matters.</p>
