fix(nav): place cart button as last nav item and anchor dropdown; mobile: keep cart outside collapsed menu

--- a/checkout.html
+++ b/checkout.html
@@ -103,11 +103,14 @@
   <a href="products.html">Products</a>
   <a href="vision.html">Vision</a>
   <a href="contact.html">Contact</a>
-      </nav>
+        <a href="products.html">Products</a>
+  <a href="vision.html">Vision</a>
+  <a href="contact.html">Contact</a>
   <button id="cart-icon" class="cart-btn" aria-label="View shopping cart" aria-haspopup="true" aria-expanded="false">
     <img src="assets/shopping-cart.svg" alt="Shopping cart" />
   </button>
-  <div id="cart-dropdown" class="cart-dropdown hidden" aria-live="polite" aria-hidden="true"></div>
+      </nav>
+  <div id="cart-dropdown" class="cart-dropdown" aria-live="polite" aria-hidden="true"></div>
     </div>
   </header>
 
