feat(products): update all product cards to use Smoky Bean Mountain image with matching alt text

--- a/products.html
+++ b/products.html
@@ -42,7 +42,7 @@
 
     <section class="product-grid container">
       <article id="dark" class="product-card reveal">
-        <img src="assets/product-dark.svg" alt="high‑octane dark roast — industrial barrel icon" loading="lazy" width="400" height="300" />
+        <img src="assets/smoky bean mountain.png" alt="high‑octane dark roast — smoky bean mountain" loading="lazy" width="400" height="300" />
         <h2>High-Octane Dark</h2>
         <p class="muted">A High-Octane Black. Roast profile: Molten, bitter, commanding.</p>
         <ul class="specs">
@@ -56,7 +56,7 @@
       </article>
 
       <article id="single-origin" class="product-card reveal">
-        <img src="assets/product-origin.svg" alt="single origin from volcanic ridge — origin icon" loading="lazy" width="400" height="300" />
+        <img src="assets/smoky bean mountain.png" alt="single origin from volcanic ridge — smoky bean mountain" loading="lazy" width="400" height="300" />
         <h2>Single Origin — Fault Line</h2>
         <p class="muted">Cruelly extracted from cracked volcanic soils.</p>
         <ul class="specs">
@@ -70,7 +70,7 @@
       </article>
 
       <article id="espresso" class="product-card reveal">
-        <img src="assets/product-espresso.svg" alt="espresso crude shot — glass icon" loading="lazy" width="400" height="300" />
+        <img src="assets/smoky bean mountain.png" alt="espresso crude shot — smoky bean mountain" loading="lazy" width="400" height="300" />
         <h2>The Crude Shot</h2>
         <p class="muted">Unfiltered. Unapologetic. A molten extraction.</p>
         <ul class="specs">
