--- a/checkout.html
+++ b/checkout.html
@@ -236,7 +236,7 @@
     <div class="footer-inner container">
       <div class="col">
         <div class="logo">
-          <img class="footer-logo" src="assets/svg-trans-logo-icon-01.svg" alt="Burning Brew" />
+          <img class="footer-logo" src="assets/svg-trans-logo-icon-01-bone.svg" alt="Burning Brew" />
           <span>BURNING BREW</span>
         </div>
         <p class="tagline">From the Earth to the Grind.</p>
@@ -297,9 +297,9 @@
       }
       setStage(1);
 
-      // Header solid on scroll
-      const header = document.getElementById('siteHeader');
-      window.addEventListener('scroll', ()=>{ if(window.scrollY>10) header.classList.add('solid'); else header.classList.remove('solid'); });
+  // Header solid on scroll — select the site header element used across pages
+  const header = document.querySelector('.site-header');
+  window.addEventListener('scroll', ()=>{ if(!header) return; if(window.scrollY>10) header.classList.add('solid'); else header.classList.remove('solid'); });
 
       // Simple form validation
       const checkoutForm = document.getElementById('checkoutForm');
