feat(home): add image placeholders and vertical card layout for Featured Rations section

--- a/index.html
+++ b/index.html
@@ -63,16 +63,19 @@
       <h3 class="section-title">Featured Rations</h3>
       <div class="grid">
         <article class="card">
+          <span class="card-photo-slot" aria-hidden="true"></span>
           <h4>High-Octane Dark</h4>
           <p class="muted">A black that bites. Sourced from the deepest strata.</p>
           <a class="btn small" href="products.html#dark">Burn Deeper</a>
         </article>
         <article class="card">
+          <span class="card-photo-slot" aria-hidden="true"></span>
           <h4>Single-Origin Fault Line</h4>
           <p class="muted">Ancestral soils, volcanic pressure, fossil-aged flavor.</p>
           <a class="btn small" href="products.html#single-origin">Burn Deeper</a>
         </article>
         <article class="card">
+          <span class="card-photo-slot" aria-hidden="true"></span>
           <h4>The Crude Shot</h4>
           <p class="muted">Unfiltered. Unapologetic. Espresso like molten tar.</p>
           <a class="btn small" href="products.html#espresso">Burn Deeper</a>
