feat(products): implement hover cross-fade between Bean Mountain and Smoky Bean Mountain images with accessible media wrapper

--- a/products.html
+++ b/products.html
@@ -39,7 +39,10 @@
 
     <section class="product-grid container">
       <article id="dark" class="product-card reveal">
-        <img src="assets/smoky bean mountain.png" alt="high‑octane dark roast — smoky bean mountain" loading="lazy" width="400" height="300" />
+        <div class="product-media">
+          <img class="product-photo product-photo--base" src="assets/bean mountain 2.png" alt="high‑octane dark roast — bean mountain landscape" loading="lazy" width="400" height="300" />
+          <img class="product-photo product-photo--hover" src="assets/smoky bean mountain 1.png" alt="" aria-hidden="true" loading="lazy" width="400" height="300" />
+        </div>
         <h2>High-Octane Dark</h2>
         <p class="muted">A High-Octane Black. Roast profile: Molten, bitter, commanding.</p>
         <ul class="specs">
@@ -53,7 +56,10 @@
       </article>
 
       <article id="single-origin" class="product-card reveal">
-        <img src="assets/smoky bean mountain.png" alt="single origin from volcanic ridge — smoky bean mountain" loading="lazy" width="400" height="300" />
+        <div class="product-media">
+          <img class="product-photo product-photo--base" src="assets/bean mountain 2.png" alt="single origin from volcanic ridge — bean mountain landscape" loading="lazy" width="400" height="300" />
+          <img class="product-photo product-photo--hover" src="assets/smoky bean mountain 1.png" alt="" aria-hidden="true" loading="lazy" width="400" height="300" />
+        </div>
         <h2>Single Origin — Fault Line</h2>
         <p class="muted">Cruelly extracted from cracked volcanic soils.</p>
         <ul class="specs">
@@ -67,7 +73,10 @@
       </article>
 
       <article id="espresso" class="product-card reveal">
-        <img src="assets/smoky bean mountain.png" alt="espresso crude shot — smoky bean mountain" loading="lazy" width="400" height="300" />
+        <div class="product-media">
+          <img class="product-photo product-photo--base" src="assets/bean mountain 2.png" alt="espresso crude shot — bean mountain landscape" loading="lazy" width="400" height="300" />
+          <img class="product-photo product-photo--hover" src="assets/smoky bean mountain 1.png" alt="" aria-hidden="true" loading="lazy" width="400" height="300" />
+        </div>
         <h2>The Crude Shot</h2>
         <p class="muted">Unfiltered. Unapologetic. A molten extraction.</p>
         <ul class="specs">
