--- a/index.html
+++ b/index.html
@@ -63,19 +63,28 @@
       <h3 class="section-title">Featured Rations</h3>
       <div class="grid">
         <article class="card">
-          <span class="card-photo-slot" aria-hidden="true"></span>
+          <div class="card-photo-slot">
+            <img class="card-photo card-photo--base" src="assets/bean mountain 2.png" alt="High-Octane Dark — bean mountain landscape" loading="lazy" width="320" height="200" />
+            <img class="card-photo card-photo--hover" src="assets/smoky bean mountain 1.png" alt="" aria-hidden="true" loading="lazy" width="320" height="200" />
+          </div>
           <h4>High-Octane Dark</h4>
           <p class="muted">A black that bites. Sourced from the deepest strata.</p>
           <a class="btn small" href="products.html#dark">Burn Deeper</a>
         </article>
         <article class="card">
-          <span class="card-photo-slot" aria-hidden="true"></span>
+          <div class="card-photo-slot">
+            <img class="card-photo card-photo--base" src="assets/bean mountain 2.png" alt="Single-Origin Fault Line — bean mountain landscape" loading="lazy" width="320" height="200" />
+            <img class="card-photo card-photo--hover" src="assets/smoky bean mountain 1.png" alt="" aria-hidden="true" loading="lazy" width="320" height="200" />
+          </div>
           <h4>Single-Origin Fault Line</h4>
           <p class="muted">Ancestral soils, volcanic pressure, fossil-aged flavor.</p>
           <a class="btn small" href="products.html#single-origin">Burn Deeper</a>
         </article>
         <article class="card">
-          <span class="card-photo-slot" aria-hidden="true"></span>
+          <div class="card-photo-slot">
+            <img class="card-photo card-photo--base" src="assets/bean mountain 2.png" alt="The Crude Shot — bean mountain landscape" loading="lazy" width="320" height="200" />
+            <img class="card-photo card-photo--hover" src="assets/smoky bean mountain 1.png" alt="" aria-hidden="true" loading="lazy" width="320" height="200" />
+          </div>
           <h4>The Crude Shot</h4>
           <p class="muted">Unfiltered. Unapologetic. Espresso like molten tar.</p>
           <a class="btn small" href="products.html#espresso">Burn Deeper</a>
