--- a/checkout.html
+++ b/checkout.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="icon" href="assets/favicon-01.svg">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/checkout.css">
   <script defer src="js/scripts.js"></script>
   <script defer src="js/cart.js"></script>
   <meta name="description" content="Complete your extraction and fuel your next mission." />
