--- a/checkout.html
+++ b/checkout.html
@@ -73,37 +73,6 @@
             <div id="addressError" class="error" aria-live="assertive"></div>
           </div>
 
-          <div class="field">
-            <fieldset class="product-grid" aria-describedby="productError">
-              <legend>Select Products</legend>
-              <div class="product-option" data-product="single-origin">
-                <label class="product-label">
-                  <input type="checkbox" class="product-toggle" data-product="single-origin" checked>
-                  <span class="product-name">Single Origin — 1 Bag</span>
-                  <span class="product-price">$18.00</span>
-                </label>
-                <input type="number" min="1" value="1" class="product-qty" data-product="single-origin" aria-label="Quantity for Single Origin" />
-              </div>
-              <div class="product-option disabled" data-product="dark-roast">
-                <label class="product-label">
-                  <input type="checkbox" class="product-toggle" data-product="dark-roast">
-                  <span class="product-name">Dark Roast — 1 Bag</span>
-                  <span class="product-price">$18.00</span>
-                </label>
-                <input type="number" min="1" value="1" class="product-qty" data-product="dark-roast" aria-label="Quantity for Dark Roast" disabled />
-              </div>
-              <div class="product-option disabled" data-product="blend">
-                <label class="product-label">
-                  <input type="checkbox" class="product-toggle" data-product="blend">
-                  <span class="product-name">The Blend — 1 Bag</span>
-                  <span class="product-price">$16.00</span>
-                </label>
-                <input type="number" min="1" value="1" class="product-qty" data-product="blend" aria-label="Quantity for The Blend" disabled />
-              </div>
-            </fieldset>
-            <div id="productError" class="error" aria-live="assertive"></div>
-          </div>
-
           <div class="field" style="display:flex;gap:.5rem;align-items:center">
             <fieldset style="flex:1;border:0;padding:0;margin:0">
               <legend style="font-weight:700">Delivery</legend>
@@ -231,26 +200,12 @@
       function showError(el, msg){ el.classList.add('invalid'); const err = document.getElementById(el.id+'Error'); if(err) err.textContent = msg; el.setAttribute('aria-invalid','true'); }
       function clearError(el){ el.classList.remove('invalid'); const err = document.getElementById(el.id+'Error'); if(err) err.textContent = ''; el.removeAttribute('aria-invalid'); }
 
-      const productFieldset = document.querySelector('.product-grid');
-      const productError = document.getElementById('productError');
-      let productToggles = [];
-      function clearProductSelectionError(){
-        if(productError) productError.textContent='';
-        if(productFieldset) productFieldset.removeAttribute('aria-invalid');
-      }
       function validateCheckout(){
         let ok=true;
         [['fullName','Please tell the machine who you are.'],['email','Please provide a valid email.'],['address','The machine needs this info.']].forEach(([id,msg])=>{
           const el=document.getElementById(id);
           if(!el.value || (id==='email' && !/\S+@\S+\.\S+/.test(el.value))){ showError(el,msg); ok=false } else clearError(el);
         });
-        if(!productToggles.some(t=>t.checked)){
-          if(productError) productError.textContent = 'Please choose at least one product.';
-          if(productFieldset) productFieldset.setAttribute('aria-invalid','true');
-          ok=false;
-        } else {
-          clearProductSelectionError();
-        }
         return ok;
       }
 
@@ -309,47 +264,7 @@
       const itemsList = document.getElementById('itemsList');
       const totalPrice = document.getElementById('totalPrice');
       const summaryTotal = document.getElementById('summaryTotal');
-      const productOptions = Array.from(document.querySelectorAll('.product-option'));
-      productToggles = Array.from(document.querySelectorAll('.product-toggle'));
-      const productQtyInputs = new Map();
-      const productData = {
-        'single-origin': { name: 'Single Origin — 1 Bag', price: 18 },
-        'dark-roast': { name: 'Dark Roast — 1 Bag', price: 18 },
-        'blend': { name: 'The Blend — 1 Bag', price: 16 }
-      };
-
-      productOptions.forEach(option=>{
-        const key = option.dataset.product;
-        const qty = option.querySelector('.product-qty');
-        if(key && qty){
-          productQtyInputs.set(key, qty);
-        }
-      });
-
-      function ensureMin(input){ if(Number(input.value) < 1) input.value = 1; }
-
-      function syncOptionState(toggle){
-        const key = toggle.dataset.product;
-        const option = toggle.closest('.product-option');
-        const qty = productQtyInputs.get(key);
-        const checked = toggle.checked;
-        if(option) option.classList.toggle('disabled', !checked);
-        if(qty){
-          qty.disabled = !checked;
-          if(checked && (!qty.value || Number(qty.value) < 1)) qty.value = 1;
-        }
-      }
-
-      function selectedProducts(){
-        return productToggles.filter(t=>t.checked).map(toggle=>{
-          const key = toggle.dataset.product;
-          const info = productData[key];
-          if(!info) return null;
-          const qty = Number(productQtyInputs.get(key)?.value) || 1;
-          return { key, qty, name: info.name, price: info.price };
-        }).filter(Boolean);
-      }
-
+      
       function shippingOf(){
         const selected = document.querySelector('input[name="delivery"]:checked');
         if(!selected) return 0;
@@ -359,20 +274,11 @@
       function formatCurrency(value){ return '$' + value.toFixed(2); }
 
       function updateTotals(){
-        const items = selectedProducts();
-        let subtotal = 0;
+        const subtotal = 18; // Default to a single product price for now
         const rows = [];
-        items.forEach(item=>{
-          const lineTotal = item.price * item.qty;
-          subtotal += lineTotal;
-          const plural = item.qty > 1 ? 'bags' : 'bag';
-          rows.push(`<div class="fuel-item"><span>${item.name} — ${item.qty} ${plural}</span><span>${formatCurrency(lineTotal)}</span></div>`);
-        });
-        if(items.length){
-          rows.push(`<div class="fuel-item totals"><span>Subtotal</span><span>${formatCurrency(subtotal)}</span></div>`);
-        } else {
-          rows.push('<div class="fuel-item"><span>No products selected</span><span>$0.00</span></div>');
-        }
+        rows.push(`<div class="fuel-item"><span>Single Origin — 1 bag</span><span>${formatCurrency(subtotal)}</span></div>`);
+        rows.push(`<div class="fuel-item totals"><span>Subtotal</span><span>${formatCurrency(subtotal)}</span></div>`);
+        
         const hasItems = subtotal > 0;
         const ship = hasItems ? shippingOf() : 0;
         const tax = hasItems ? +(subtotal * 0.068).toFixed(2) : 0;
@@ -382,31 +288,6 @@
         itemsList.innerHTML = rows.join('');
         totalPrice.textContent = formatCurrency(total);
         summaryTotal.textContent = formatCurrency(total);
-      }
-
-      const productParamMap = { dark: 'dark-roast', espresso: 'blend' };
-      const productParam = productParamMap[productParamRaw] || productParamRaw;
-
-      productToggles.forEach(toggle=>{
-        const key = toggle.dataset.product;
-        syncOptionState(toggle);
-        toggle.addEventListener('change', ()=>{
-          syncOptionState(toggle);
-          if(productToggles.some(t=>t.checked)) clearProductSelectionError();
-          updateTotals();
-        });
-        const qty = productQtyInputs.get(key);
-        if(qty){
-          qty.addEventListener('input', ()=>{ ensureMin(qty); updateTotals(); });
-        }
-      });
-
-      if(productParam && productQtyInputs.has(productParam)){
-        productToggles.forEach(toggle=>{
-          const isMatch = toggle.dataset.product === productParam;
-          toggle.checked = isMatch;
-          syncOptionState(toggle);
-        });
       }
 
       document.querySelectorAll('input[name="delivery"]').forEach(r=>r.addEventListener('change', updateTotals));
