--- a/products.html
+++ b/products.html
@@ -18,15 +18,17 @@
   <img src="assets/svg-trans-logo-icon-01-bone.svg" class="brand-logo" alt="Burning Brew logo" />
     <span class="brand-text">BURNING BREW</span>
   </a>
-  <button id="nav-toggle" class="nav-toggle" aria-label="Open navigation" aria-expanded="false">☰</button>
-      <nav class="site-nav" id="site-nav" aria-label="Main navigation">
-        <a href="products.html">Products</a>
-        <a href="vision.html">Vision</a>
-        <a href="contact.html">Contact</a>
-      </nav>
-  <button id="cart-icon" class="cart-btn" aria-label="View shopping cart" aria-haspopup="true" aria-expanded="false">
-    <img src="assets/shopping-cart.svg" alt="Shopping cart" />
-  </button>
+  <div class="mobile-controls">
+    <button id="cart-icon" class="cart-btn" aria-label="View shopping cart" aria-haspopup="true" aria-expanded="false">
+      <img src="assets/shopping-cart.svg" alt="Shopping cart" />
+    </button>
+    <button id="nav-toggle" class="nav-toggle" aria-label="Open navigation" aria-expanded="false">☰</button>
+  </div>
+  <nav class="site-nav" id="site-nav" aria-label="Main navigation">
+    <a href="products.html">Products</a>
+    <a href="vision.html">Vision</a>
+    <a href="contact.html">Contact</a>
+  </nav>
   <div id="cart-dropdown" class="cart-dropdown" aria-live="polite" aria-hidden="true"></div>
     </div>
   </header>
