fix(nav): keep cart external to hamburger on mobile

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,12 @@
   <img src="assets/svg-trans-logo-icon-01-bone.svg" class="brand-logo" alt="Burning Brew logo" />
     <span class="brand-text">BURNING BREW</span>
   </a>
-  <button id="nav-toggle" class="nav-toggle" aria-label="Open navigation" aria-expanded="false">☰</button>
+  <div class="mobile-controls">
+    <button id="mobile-cart-icon" class="cart-btn" aria-label="View shopping cart" aria-haspopup="true" aria-expanded="false">
+      <img src="assets/shopping-cart.svg" alt="Shopping cart" />
+    </button>
+    <button id="nav-toggle" class="nav-toggle" aria-label="Open navigation" aria-expanded="false">☰</button>
+  </div>
   <nav class="site-nav" id="site-nav" aria-label="Main navigation">
     <a href="products.html">Products</a>
     <a href="vision.html">Vision</a>
